--- a/qcomm_invmgmt/templates/index.html
+++ b/qcomm_invmgmt/templates/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-    <html>
-        <head></head>
-        <body>
-            Welcome TO Inventory Management
-        </body>
-    </html>
+<!DOCTYPE html> 
+<html>
+    <head>
+        
+    </head>
+    <body>
+        Welcome To Inventory Module - Sample inputting the data
+    </body>
+</html>
